<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhereAbouts</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export DB to CSV</string>
    <string name="button_send">Start</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="title_activity_display_location">Location</string>

    <string name="send_hint">Press "TRY" to try out WhereAbouts! </string>
    <string name="lacoordinates">latitude coordinate</string>
    <string name="locoordinates">longitude coordinate</string>
    <string name="location">You are at</string>
    <string name="locationreal">updated location</string>
    <string name="tpcategory">Trip Category</string>
    <string name="tpcategoryselect">List of Categories</string>
    <string name="tp">Trip Purpose</string>
    <string name="tpselect">List of Purposes</string>
    <string name="purpose_header">I am here for...</string>
    <string name="confirm_btn">confirm</string>
    <string name="skip_button">skip</string>
    <string name="location_header">I am at ...</string>
    <string name="accessibility_descript">Grid Background Image</string>
</resources>
