<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingTop="80dp"
    android:rowCount="6">


    <TextView
        android:id="@+id/LA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:gravity="left"
        android:text="@string/latitude"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:paddingLeft="10dp"
        android:text="@string/lacoordinates" />

    <TextView
        android:id="@+id/LO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="left"
        android:paddingTop="10dp"
        android:text="@string/longitude"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/locoordinates" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:paddingTop="10dp"
        android:text="@string/location"
        android:textStyle="bold"

        />
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingTop="10dp"-->
    <!--android:text="@string/locationreal"-->
    <!--android:id="@+id/locationreal"-->
    <!--android:layout_row="2"-->
    <!--android:layout_column="1"-->
    <!--android:paddingLeft="10dp"-->
    <!--/>-->
    <Spinner
        android:id="@+id/locationreal"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" />
    <TextView
        android:id="@+id/tpcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:paddingTop="10dp"
        android:text="@string/tpcategory"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/tpcategoryselect"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/tp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:paddingTop="10dp"
        android:text="@string/tp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/trippurpose"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" />

    <!--<TextView-->
        <!--android:id="@+id/trippurpose"-->
        <!--style="?android:attr/spinnerItemStyle"-->
        <!--android:singleLine="true"-->
        <!--android:layout_width="220dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_column="1"-->
        <!--android:layout_row="4"-->
        <!--android:ellipsize="marquee"-->
        <!--android:textSize="18sp"-->
        <!--android:textColor="#808080"-->
        <!--android:text="[Select a Planet...]" />-->

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:onClick="confirm"
        android:text="CONFIRM" />
</GridLayout>